--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,4 +39,10 @@ jobs:
         with:
           method: kubeconfig
           kubeconfig: ${{ secrets.K8S_KUBE_CONFIG }}
-      
+                
+      - name: Deploy to Kubernetes cluster
+        uses: Azure/k8s-deploy@v3.0
+        with: 
+          images: sysfel/rotten-poptatoes:${{ github.run_number }}
+          manifests: k8s/deployment.yaml
+        
