--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Deploy to Kubernetes cluster
         uses: Azure/k8s-deploy@v3.0
         with: 
-          images: sysfel/rotten-poptatoes:${{ github.run_number }}
-          manifests: k8s/deployment.yaml
+          images: sysfel/rotten-potatoes:${{ github.run_number }}
+          manifests: |
+            k8s/deployment.yaml
         
